--- a/NBA/angular.json
+++ b/NBA/angular.json
@@ -39,7 +39,7 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
+                  "maximumWarning": "5kB",
                   "maximumError": "4kb"
                 }
               ],
