--- a/NBA/angular.json
+++ b/NBA/angular.json
@@ -34,7 +34,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "5kB",
                   "maximumError": "1mb"
                 },
                 {
